--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Roblox Limiteds News</title>
+  <title>{{ site.title }}</title>
 </head>
 <body>
-  <h1>Roblox Limiteds News</h1>
-  <p>Stay tuned for the latest drops</p>
+  <h1>{{ site.title }}</h1>
+  <p>{{ site.description }}</p>
+  <ul>
+    {% for post in site.posts %}
+      <li>
+        <a href="{{ post.url }}">{{ post.title }} ({{ post.date | date: "%b %-d, %Y" }})</a>
+      </li>
+    {% endfor %}
+  </ul>
 </body>
 </html>
