--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+---
+title: Home
+---
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
@@ -7,10 +11,13 @@
 <body>
   <h1>{{ site.title }}</h1>
   <p>{{ site.description }}</p>
+
   <ul>
     {% for post in site.posts %}
       <li>
-        <a href="{{ post.url }}">{{ post.title }} ({{ post.date | date: "%b %-d, %Y" }})</a>
+        <a href="{{ post.url | relative_url }}">
+          {{ post.title }} — {{ post.date | date: "%b %-d, %Y" }}
+        </a>
       </li>
     {% endfor %}
   </ul>
