--- a/index.html
+++ b/index.html
@@ -7,18 +7,69 @@ title: Home
 <head>
   <meta charset="utf-8">
   <title>{{ site.title }}</title>
+  <style>
+    /* Layout */
+    body {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f9f9f9;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.2rem;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.2rem;
+    }
+    p.lead {
+      color: #666;
+      margin-top: 0;
+      margin-bottom: 2rem;
+    }
+
+    /* Post list */
+    ul.posts {
+      list-style: none;
+      padding: 0;
+    }
+    ul.posts li {
+      background: #fff;
+      margin: 0.5rem 0;
+      padding: 0.75rem 1rem;
+      border-radius: 4px;
+      transition: box-shadow 0.2s;
+    }
+    ul.posts li:hover {
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    ul.posts li a {
+      text-decoration: none;
+      color: #007acc;
+      font-weight: 500;
+    }
+    ul.posts li a:hover {
+      text-decoration: underline;
+    }
+    span.date {
+      float: right;
+      color: #999;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
   <h1>{{ site.title }}</h1>
-  <p>{{ site.description }}</p>
+  <p class="lead">{{ site.description }}</p>
 
-  <ul>
+  <ul class="posts">
     {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url | relative_url }}">
-          {{ post.title }} — {{ post.date | date: "%b %-d, %Y" }}
-        </a>
-      </li>
+    <li>
+      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      <span class="date">{{ post.date | date: "%b %-d, %Y" }}</span>
+    </li>
     {% endfor %}
   </ul>
 </body>
